--- a/era2/era2_slides_w13.tex
+++ b/era2/era2_slides_w13.tex
@@ -42,7 +42,7 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
-%\usepackage{xcolor}
+\usepackage{xcolor}
 \usepackage[cache=true]{minted}
 \usemintedstyle{borland}
 %\usepackage{listings}
@@ -393,9 +393,9 @@
 				\resizebox{0.8\textwidth}{!}{
 					\begin{tikzpicture}
 						\tikzset{
-							terminal/.style={draw, shape=circle, fill=red, inner sep=3pt},
-							hanan/.style={draw, shape=circle, fill=red!30, inner sep=3pt},
-							hananline/.style={color=red, dashed, very thick},
+							terminal/.style={draw, shape=circle, fill=TUMExtRed, inner sep=3pt},
+							hanan/.style={draw, shape=circle, fill=TUMExtRed!30, inner sep=3pt},
+							hananline/.style={color=TUMExtRed, dashed, very thick},
 							marker/.style={draw, shape=circle, dashed, color=red, thick, inner sep=5pt},
 							bboxline/.style={color=black, dashed, very thick, line cap=round},
 							steinerbranch/.style={color=black, ultra thick, line cap=round}}
