--- a/era2/era2_slides_w13.tex
+++ b/era2/era2_slides_w13.tex
@@ -396,7 +396,7 @@
 							terminal/.style={draw, shape=circle, fill=TUMExtRed, inner sep=3pt},
 							hanan/.style={draw, shape=circle, fill=TUMExtRed!30, inner sep=3pt},
 							hananline/.style={color=TUMExtRed, dashed, very thick},
-							marker/.style={draw, shape=circle, dashed, color=red, thick, inner sep=5pt},
+							marker/.style={draw, shape=circle, dashed, color=TUMExtRed, thick, inner sep=5pt},
 							bboxline/.style={color=black, dashed, very thick, line cap=round},
 							steinerbranch/.style={color=black, ultra thick, line cap=round}}
 
