--- a/era2/era2_slides_w14.tex
+++ b/era2/era2_slides_w14.tex
@@ -204,7 +204,7 @@
 	\begin{itemize}
 		\item Übungsblätter rechnen
 		\item Probeklausur rechnen, um Gefühl für Klausurformat zu bekommen. Am besten ohne Hilfsmittel/Lösung + Stoppuhr
-		\item Assembly lernen! Aufgaben oft sehr einfach
+		\item Assembly üben! Aufgaben oft sehr einfach
 		\item zusätzliche Assembly-Aufgaben: \href{https://github.com/ladnik/RISC-V-Assembly-Introductory-Exercises}{github.com/ladnik}
 		\item meist ist ERA eine Überhangsklausur: zuerst Aufgaben machen, die ihr gut könnt
 	\end{itemize}
