--- a/era2/era2_slides_w14.tex
+++ b/era2/era2_slides_w14.tex
@@ -187,7 +187,7 @@
 			\end{itemize}
 		\end{column}
 		\begin{column}{0.5\textwidth}
-			\centering \textbf{Dont's} \textcolor{red}{\xmark}
+			\centering \textbf{Don'ts} \textcolor{red}{\xmark}
 			\vspace{\baselineskip}
 			\begin{itemize}
 				\item rote oder grüne Stifte, Bleistift
@@ -204,7 +204,7 @@
 	\begin{itemize}
 		\item Übungsblätter rechnen
 		\item Probeklausur rechnen, um Gefühl für Klausurformat zu bekommen. Am besten ohne Hilfsmittel/Lösung + Stoppuhr
-		\item Assembly üben	! Aufgaben oft sehr einfach
+		\item Assembly üben! Aufgaben oft sehr einfach
 		\item zusätzliche Assembly-Aufgaben: \href{https://github.com/ladnik/RISC-V-Assembly-Introductory-Exercises}{github.com/ladnik}
 		\item meist ist ERA eine Überhangsklausur: zuerst Aufgaben machen, die ihr gut könnt
 	\end{itemize}
@@ -295,6 +295,7 @@
 					scale only axis,
 					axis line style={draw=none},
 					tick style={draw=none},
+					ymin=0,
 					width=\textwidth,
 					height=0.75\textheight,
 					yticklabel=\empty,
