--- a/beamer/tumcolors.sty
+++ b/beamer/tumcolors.sty
@@ -107,21 +107,21 @@
 % .:: Redefinition of standard colors
 % ----------------------------------------------------------------------------
 
-\colorlet{black}      {TUMBlack}
+% \colorlet{black}      {TUMBlack}
 \colorlet{blue}       {TUMBlue}
-\colorlet{darkgray}   {TUMGrayDark}
-\colorlet{gray}       {TUMGray}
-\colorlet{green}      {TUMGreen}
-\colorlet{lightgray}  {TUMGrayLight}
-\colorlet{lime}       {TUMExtLime}
-\colorlet{orange}     {TUMOrange}
-\colorlet{red}        {TUMExtRed}
-\colorlet{teal}       {TUMExtTeal}
-\colorlet{violet}     {TUMExtViolet}
-\colorlet{white}      {TUMWhite}
-\colorlet{yellow}     {TUMExtYellow}
-\colorlet{ForestGreen}{TUMExtForest}
-\colorlet{Goldenrod}  {TUMExtGoldenrod}
-\colorlet{Maroon}     {TUMExtMaroon}
-\colorlet{NavyBlue}   {TUMExtNavy}
-\colorlet{RedOrange}  {TUMExtPumpkin}
+% \colorlet{darkgray}   {TUMGrayDark}
+% \colorlet{gray}       {TUMGray}
+% \colorlet{green}      {TUMGreen}
+% \colorlet{lightgray}  {TUMGrayLight}
+% \colorlet{lime}       {TUMExtLime}
+% \colorlet{orange}     {TUMOrange}
+% \colorlet{red}        {TUMExtRed}
+% \colorlet{teal}       {TUMExtTeal}
+% \colorlet{violet}     {TUMExtViolet}
+% \colorlet{white}      {TUMWhite}
+% \colorlet{yellow}     {TUMExtYellow}
+% \colorlet{ForestGreen}{TUMExtForest}
+% \colorlet{Goldenrod}  {TUMExtGoldenrod}
+% \colorlet{Maroon}     {TUMExtMaroon}
+% \colorlet{NavyBlue}   {TUMExtNavy}
+% \colorlet{RedOrange}  {TUMExtPumpkin}
