--- a/era/era_slides_w04.tex
+++ b/era/era_slides_w04.tex
@@ -153,7 +153,7 @@
   \begin{itemize}
     \item H04 --- Tribonacci bis 19.11.2023 23:59 Uhr
     \item Implementierung einer rekursiven Funktion
-    \item Aufbau von Folie \enqutote{Rekursion}beachten
+    \item Aufbau von Folie \enquote{Rekursion} beachten
     \item Einhaltung der CC verpflichtend $\rightarrow$ siehe Link
   \end{itemize}
 \end{frame}
