--- a/era2/era2_slides_w11.tex
+++ b/era2/era2_slides_w11.tex
@@ -147,7 +147,7 @@
 				s6: sub {\only<2>{\color{blue}}{t2}}, t3, t0  \\
 			
 		}
-				\\	\vspace{\baselineskip}\scriptsize{Mit * markierte Abhängigkeiten sind Datenkonflikte}
+				\vspace{\baselineskip}\scriptsize{Mit * markierte Abhängigkeiten sind Datenkonflikte}
 
 		\end{column}
 		\begin{column}{0.4\textwidth}
