--- a/era3/era3_slides_w05.tex
+++ b/era3/era3_slides_w05.tex
@@ -478,7 +478,7 @@
 
 			\matrix [column sep=15mm,row sep=10mm]
 			{
-				\node [decision] (iscoldmiss) {Erster Zugriff auf Adresse?};
+				\node [decision] (iscoldmiss) {Erster Zugriff auf Block?};
 				\& \node [decision] (iscapmiss) {Wäre dieser Miss auch bei voll-assoziativem Cache passiert?}; \& \\
 				\node [cloud] (coldmiss) {Cold Miss};
 				\& \node [cloud] (capacitymiss) {Capacity Miss};
