Update riscv-circuitikz integration

--- a/era3/era3_slides_w09.tex
+++ b/era3/era3_slides_w09.tex
@@ -54,8 +54,9 @@
 \def\Circuitikz{Circui\TikZ}
 
 % processor
+\ctikzset{processor/font=\fontsize{10}{12}\fontfamily{lmss}\selectfont}
+\tikzset{font=\fontsize{10}{12}\fontfamily{lmss}\selectfont}
 \definecolor{modblue}{HTML}{288DCC}
-\ctikzset{processor/font=\fontfamily{lmss}\selectfont}
 
 % https://tex.stackexchange.com/a/7045
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
