--- a/era3/era3_slides_w08.tex
+++ b/era3/era3_slides_w08.tex
@@ -53,8 +53,9 @@
 \usetikzlibrary{fit, matrix, calc, arrows, arrows.meta, positioning, patterns, patterns.meta, overlay-beamer-styles, riscvproc}
 
 % processor
+\ctikzset{processor/font=\fontsize{10}{12}\fontfamily{lmss}\selectfont}
+\tikzset{font=\fontsize{10}{12}\fontfamily{lmss}\selectfont}
 \definecolor{modblue}{HTML}{288DCC}
-\ctikzset{processor/font=\fontfamily{lmss}\selectfont}
 
 % https://tex.stackexchange.com/a/7045
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
