--- a/era3/era3_slides_w12.tex
+++ b/era3/era3_slides_w12.tex
@@ -494,6 +494,12 @@
 	\end{columns}
 \end{frame}
 
+\begin{frame}[c, fragile]{}{}
+	\begin{center}
+		\LARGE Fragen?
+	\end{center}
+\end{frame}
+
 \begin{frame}[c, fragile]{Links}{}
 	\begin{itemize}
 		\item \href{https://zulip.in.tum.de/#narrow/channel/3255-ERA-Tutorium-.E2.80.93-Mi-1600-3}{\enquote{ERA Tutorium -- Mi-1600-3}}
