--- a/era3/era3_slides_w09.tex
+++ b/era3/era3_slides_w09.tex
@@ -256,7 +256,11 @@
 	\end{center}
 \end{frame}
 
-
+\begin{frame}[c, fragile]{}{}
+	\begin{center}
+		\LARGE Fragen?
+	\end{center}
+\end{frame}
 
 \begin{frame}[c, fragile]{Links}{}
 	\begin{itemize}
