--- a/era3/era3_slides_w11.tex
+++ b/era3/era3_slides_w11.tex
@@ -397,6 +397,11 @@
 	\end{center}
 \end{frame}
 
+\begin{frame}[c, fragile]{}{}
+	\begin{center}
+		\LARGE Fragen?
+	\end{center}
+\end{frame}
 
 \begin{frame}[c, fragile]{Links}{}
 	\begin{itemize}
