--- a/era3/era3_slides_w13.tex
+++ b/era3/era3_slides_w13.tex
@@ -240,16 +240,17 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 			minimum height=2em},
 	e/.style = {draw=none,circle, minimum width=2em,minimum height=2em}
 }
-\begin{frame}[c, fragile]{Binary Decision Diagrams}{}
+\begin{frame}[c, fragile]{Binary Decision Diagrams (BDDs)}{}
 	\begin{columns}[c]
 		\begin{column}{0.5\textwidth}
 			\begin{itemize}
 				\item Darstellung einer boolschen Funktion als gerichteter azyklischer Graph (DAG)
 				\item Knoten repräsentieren Teilfunktionen, 2 ausgehende Kanten: $0$ (low), $1$ (high)
 				\item Aufbau bspw. mittels Shannon-Zerlegung: $f(x_0, x_1) \rightarrow f_{x_0=0}(x_1), f_{x_0=1}(x_1)$
+				\item Reduced Ordered BDD: Alle möglichen Reduktionen angewandt, festgelegte Variablenordnung
 				\item \textbf{ROBDDs sind kanonisch (eindeutig)}
 			\end{itemize}
-		\end{column}
+		\end{column}%
 		\begin{column}{0.5\textwidth}
 			\begin{center}
 				\resizebox{!}{0.8\textheight}{
@@ -262,8 +263,8 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 						\node[c] (x3l) [below=of x2l] {$x_3$};
 						\node[c] (x3r) [below=of x2r] {$x_3$};
 
-						\node[r] (zero) [below=of x3r, xshift=-0.5cm] {0};
-						\node[r] (one) [below=of x3l, xshift=0.5cm] {1};
+						\node[r] (zero) [below=of x3r, xshift=-0.5cm] {$0$};
+						\node[r] (one) [below=of x3l, xshift=0.5cm] {$1$};
 
 						\draw[zeroarrow] (x1) -- (x2l) node [midway, fill=none, above left] {$x_2\n{x}_3$};
 						\draw[onearrow] (x1) -- (x2r)  node [near end, fill=none, above right, align=center] {$\n{x}_2\n{x}_3+$\\$x_2x_3$};
@@ -337,7 +338,7 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 					\end{tikzpicture}
 				}
 			\end{center}
-		\end{column}
+		\end{column}%
 		\begin{column}{0.5\textwidth}
 			\begin{center}
 				\textbf{S-Reduktion}\\
@@ -377,7 +378,66 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 	\end{columns}
 \end{frame}
 
-\begin{frame}[c, fragile]{ITE}
+\begin{frame}[c, fragile]{BDDs: Umordnungsalgorithmus}
+	\begin{center}
+		\begin{tikzpicture}
+			\tikzset{
+				highlight/.style={draw=TUMBlue, thick, fill=TUMBlue, fill opacity=0.35, text opacity=1},
+				ahighlight/.style={draw=TUMBlue, thick},
+				highlight on/.style={alt=#1{highlight}{}},
+				ahighlight on/.style={alt=#1{ahighlight}{}},
+			}
+			\def\smallspace{0.75cm}
+			\def\bigspace{6cm}
+			
+			\node[c] (x1) {$a$};
+			\node[below=4.5*\smallspace of x1] {$a\prec b\prec c$};
+			
+			\node[c] (x2l) [below=\smallspace of x1, xshift=-2*\smallspace] {$b$};
+			\node[c] (x2r) [below=\smallspace of x1, xshift=2*\smallspace] {$b$};
+			
+			\node[c] (x3ll) [below=\smallspace of x2l, xshift=-\smallspace, highlight on=<2>] {$c_1$};
+			\node[c] (x3lr) [below=\smallspace of x2l, xshift=\smallspace, highlight on=<4>] {$c_2$};
+			\node[c] (x3rl) [below=\smallspace of x2r, xshift=-\smallspace, highlight on=<5>] {$c_3$};
+			\node[c] (x3rr) [below=\smallspace of x2r, xshift=\smallspace, highlight on=<3>] {$c_4$};
+			
+			\draw[zeroarrow,visible on=<1-3>, ahighlight on=<2>] (x1) -- (x2l) node[midway, above left, TUMBlue, visible on=<2>] {$0$};
+			\draw[zeroarrow,visible on=<4->, ahighlight on=<4>] (x1) -- (x2l) node[midway, above left, TUMBlue, visible on=<4>] {$0$};
+			\draw[onearrow, visible on=<1-4>,ahighlight on=<3>] (x1) -- (x2r) node[midway, above right, TUMBlue,visible on=<3>] {$1$};
+			\draw[onearrow, visible on=<5->,ahighlight on=<5>] (x1) -- (x2r) node[midway, above right, TUMBlue,visible on=<5>] {$1$};
+			
+			\draw[zeroarrow, ahighlight on=<2>] (x2l) -- (x3ll) node[pos=0.6, above left,TUMBlue, visible on=<2>] {$0$};
+			\draw[onearrow, ahighlight on=<4>] (x2l) -- (x3lr) node[pos=0.6,above right, TUMBlue,visible on=<4>] {$1$};
+			\draw[zeroarrow, ahighlight on=<5>] (x2r) -- (x3rl) node[pos=0.6,above left, TUMBlue, visible on=<5>] {$0$};
+			\draw[onearrow, ahighlight on=<3>] (x2r) -- (x3rr) node[pos=0.6, above right, TUMBlue, visible on=<3>] {$1$};
+			
+			\node[c, right=\bigspace of x1] (y1) {$b$};
+			\node[below=4.5*\smallspace of y1] {$b\prec a\prec c$};
+			
+			\node[c] (y2l) [below=\smallspace of y1, xshift=-2*\smallspace] {$a$};
+			\node[c] (y2r) [below=\smallspace of y1, xshift=2*\smallspace] {$a$};
+			
+			\node[c] (y3ll) [below=\smallspace of y2l, xshift=-\smallspace, visible on=<2->, highlight on=<2>] {$c_1$};
+			\node[c] (y3lr) [below=\smallspace of y2l, xshift=\smallspace, visible on=<5->, highlight on=<5>] {$c_3$};
+			\node[c] (y3rl) [below=\smallspace of y2r, xshift=-\smallspace, visible on=<4->, highlight on=<4>] {$c_2$};
+			\node[c] (y3rr) [below=\smallspace of y2r, xshift=\smallspace, visible on=<3->, highlight on=<3>] {$c_4$};
+			
+			\draw[zeroarrow, visible on=<2-4>, ahighlight on=<2>] (y1) -- (y2l) node[midway, above left, TUMBlue,visible on=<2>] {$0$};
+			\draw[zeroarrow, visible on=<5->, ahighlight on=<5>] (y1) -- (y2l) node[midway, above left, TUMBlue,visible on=<5>] {$0$};
+			\draw[onearrow, visible on=<3>, ahighlight on=<3>] (y1) -- (y2r) node[midway, above right, TUMBlue,visible on=<3>] {$1$};
+			\draw[onearrow, visible on=<4->, ahighlight on=<4>] (y1) -- (y2r) node[midway, above right, TUMBlue,visible on=<4>] {$1$};
+			
+			\draw[zeroarrow, visible on=<2->, ahighlight on=<2>] (y2l) -- (y3ll) node[pos=0.6, above left, TUMBlue,visible on=<2>] {$0$};
+			\draw[onearrow, visible on=<5->,ahighlight on=<5>] (y2l) -- (y3lr) node[pos=0.6,above right,TUMBlue,visible on=<5>] {$1$};
+			\draw[zeroarrow, visible on=<4->,ahighlight on=<4>] (y2r) -- (y3rl) node[pos=0.6,above left,TUMBlue,visible on=<4>] {$0$};
+			\draw[onearrow, visible on=<3->, ahighlight on=<3>] (y2r) -- (y3rr) node[pos=0.6, above right, TUMBlue,visible on=<3>] {$1$};
+			
+			\node[draw=none, visible on=<6>] {};
+		\end{tikzpicture}
+	\end{center}
+\end{frame}
+
+\begin{frame}[c, fragile]{If-Then-Else-Operator (ITE)}
 	\begin{columns}[c]
 		\begin{column}{0.5\textwidth}
 			\begin{itemize}
@@ -389,6 +449,7 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 					      \item $\textrm{AND}(f,g) \equiv \textrm{ITE}(f, g, 0)$
 				      \end{enumerate}
 				\item Zusammenhang mit BDDs: High-Kind im True-Fall, Low-Kind im False-Fall
+				\item ITE-Algorithmus: Verknüpfung mehrerer BDDs mittels eines Operators
 			\end{itemize}
 		\end{column}
 		\begin{column}{0.5\textwidth}
@@ -454,10 +515,10 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 				      \item Für alle mit $t$ bezeichneten Knoten: Abstieg ins Low-Kind, erzeuge im Ergebnis-BDD an der aktuellen Stelle den Kindknoten $A_{i, t=0} \oplus B_{i, t=0}$
 				      \item Für alle mit $t$ bezeichneten Knoten: Abstieg ins High-Kind, erzeuge im Ergebnis-BDD an der aktuellen Stelle den Kindknoten $A_{i, t=1} \oplus B_{i, t=1}$
 			      \end{enumerate}
-			\item Eventuell I- und S-Reduktionen anwenden
+			\item Während der Konstruktion Knoten mit gleicher Teilformel direkt zusammenfassen
 		\end{enumerate}
 	}
-	\only<2-12>{
+	\only<2-17>{
 		\begin{center}
 			\begin{tikzpicture}
 
@@ -467,19 +528,19 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 				\def\labelspacing{0cm}
 
 				% f
-				\node[c, highlight on=<3>, highlight on=<9>] (x1) {$a$};
+				\node[c, highlight on=<3>, highlight on=<11>] (x1) {$a$};
 				\node[right=\labelspacing of x1] {$A_1$};
 
-				\node[c] (x2l) [below=\smallspace of x1, xshift=-2*\smallspace, highlight on=<4>, highlight on=<8>] {$b$};
+				\node[c] (x2l) [below=\smallspace of x1, xshift=-2*\smallspace, highlight on=<4>,highlight on=<7>, highlight on=<10>] {$b$};
 				\node[left=\labelspacing of x2l] {$A_2$};
 
 				\node[right=0.4*\bigspace of x1, yshift=-2*\smallspace, align=center] {\LARGE$\oplus$};
 
-				\node[c] (x3rl) [below=\smallspace of x2r, xshift=-2*\smallspace, highlight on=<10>, highlight on=<11>, highlight on=<12>] {$c$};
+				\node[c] (x3rl) [below=\smallspace of x2r, xshift=-2*\smallspace, highlight on=<12-17>] {$c$};
 				\node[right=\labelspacing of x3rl] {$A_3$};
 
 				\node[r, below=\smallspace of x3rl, xshift=-2*\smallspace, highlight on=<5>, highlight on=<6>] (zero) {$0$};
-				\node[r, below=\smallspace of x3rl, highlight on=<7>] (one) {$1$};
+				\node[r, below=\smallspace of x3rl, highlight on=<8-9>] (one) {$1$};
 
 				\draw[zeroarrow] (x1) -- (x2l);
 				\draw[onearrow] (x1) -- (x3rl);
@@ -491,17 +552,17 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 				\draw[onearrow] (x3rl) -- (zero);
 
 				% g
-				\node[c, right=\bigspace of x1, highlight on=<3>, highlight on=<9>] (y1) {$a$};
+				\node[c, right=\bigspace of x1, highlight on=<3>, highlight on=<11>] (y1) {$a$};
 				\node[right=\labelspacing of y1] {$B_1$};
 
-				\node[c] (y2r) [below=\smallspace of y1, xshift=2*\smallspace, highlight on=<10>] {$b$};
+				\node[c] (y2r) [below=\smallspace of y1, xshift=2*\smallspace, highlight on=<{12,15}>] {$b$};
 				\node[right=\labelspacing of y2r] {$B_2$};
 
-				\node[c] (y3lr) [below=\smallspace of y2r, xshift=-2*\smallspace, highlight on=<4>, highlight on=<5>,  highlight on=<6>, highlight on=<7>, highlight on=<8>] {$c$};
+				\node[c] (y3lr) [below=\smallspace of y2r, xshift=-2*\smallspace, highlight on=<4-10>] {$c$};
 				\node[left=\labelspacing of y3lr] {$B_3$};
 
-				\node[r, below=\smallspace of y3lr, highlight on=<11>] (yzero) {$0$};
-				\node[r, below=\smallspace of y3lr, xshift=2*\smallspace, highlight on=<12>] (yone) {$1$};
+				\node[r, below=\smallspace of y3lr, highlight on=<13-14>] (yzero) {$0$};
+				\node[r, below=\smallspace of y3lr, xshift=2*\smallspace, highlight on=<{16,17}>] (yone) {$1$};
 
 				\draw[zeroarrow] (y1) -- (y3lr);
 				\draw[onearrow] (y1) -- (y2r);
@@ -514,14 +575,14 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 
 				% result
 
-				\node[c, right=2*\bigspace of y1, visible on=<3->, highlight on=<3>, highlight on=<9>] (r1) {$a$};
+				\node[c, right=2*\bigspace of y1, visible on=<3->, highlight on=<3>, highlight on=<11>] (r1) {$a$};
 				\node[left=\labelspacing of r1, visible on=<3->] {$A_1, B_1$};
 
-				\node[c] (r2l) [below=\smallspace of r1, xshift=-2*\smallspace, visible on=<4->, highlight on=<4>, highlight on=<8>] {$b$};
+				\node[c] (r2l) [below=\smallspace of r1, xshift=-2*\smallspace, visible on=<4->, highlight on=<{4,7,10}>] {$b$};
 				\node[left=\labelspacing of r2l, visible on=<4->] {$A_2, B_3$};
 				\draw[zeroarrow, visible on=<4->] (r1) -- (r2l);
 
-				\node[c] (r3ll) [below=\smallspace of r2l, xshift=-2*\smallspace, visible on=<5->, highlight on=<5>, highlight on=<11>] {$c$};
+				\node[c] (r3ll) [below=\smallspace of r2l, xshift=-2*\smallspace, visible on=<5->, highlight on=<5>, highlight on=<{13,14}>] {$c$};
 				\node[left=\labelspacing of r3ll, visible on=<5->] {$B_3$};
 				\draw[zeroarrow, visible on=<5->] (r2l) -- (r3ll);
 
@@ -530,34 +591,39 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 				\draw[zeroarrow, visible on=<6->] (r3ll) -- (rone);
 				\draw[onearrow, visible on=<6->] (r3ll) -- (rzero);
 
-				\node[c] (r3lr) [below=\smallspace of r2l, visible on=<7->, highlight on=<7>, highlight on=<12>] {$c$};
-				\node[right=\labelspacing of r3lr, visible on=<7->] {$\neg B_3$};
-				\draw[onearrow, visible on=<7->] (r2l) -- (r3lr);
-				\draw[zeroarrow, visible on=<7->] (r3lr) -- (rzero);
-				\draw[onearrow, visible on=<7->] (r3lr) -- (rone);
+				\node[c] (r3lr) [below=\smallspace of r2l, visible on=<8->, highlight on=<8-9>, highlight on=<{16,17}>] {$c$};
+				\node[right=\labelspacing of r3lr, visible on=<9->] {$\neg B_3$};
+				\draw[onearrow, visible on=<8->] (r2l) -- (r3lr);
+				\draw[zeroarrow, visible on=<9->] (r3lr) -- (rzero);
+				\draw[onearrow, visible on=<9->] (r3lr) -- (rone);
 
-				\node[c] (r2r) [below=\smallspace of r1, xshift=0, visible on=<10->, highlight on=<10>] {$b$};
-				\node[below=\labelspacing of r2r, visible on=<10->] {$A_3,B_2$};
-				\draw[onearrow, visible on=<10->] (r1) -- (r2r);
+				\node[c] (r2r) [below=\smallspace of r1, xshift=0, visible on=<12->, highlight on=<{12,15}>] {$b$};
+				\node[below=\labelspacing of r2r, visible on=<12->] {$A_3,B_2$};
+				\draw[onearrow, visible on=<12->] (r1) -- (r2r);
 
-				\draw[zeroarrow, visible on=<11->] (r2r) -- (r3ll);
-				\draw[onearrow, visible on=<12->] (r2r) -- (r3lr);
+				\draw[zeroarrow, visible on=<14->] (r2r) -- (r3ll);
+				\draw[onearrow, visible on=<17->] (r2r) -- (r3lr);
 			\end{tikzpicture}
 			\vfill{}
-			\only<1-2>{\phantom{label}}
+			\only<1-2>{\phantom{Top-Variable $a$}}
 			\only<3>{Top-Variable $a$}
-			\only<4>{Top-Variable $b$, Abstieg ins Low-Kind}
-			\only<5>{Top-Variable $c$, Abstieg ins Low-Kind}
-			\only<6>{$0 \oplus B_3 \equiv B_3$}
-			\only<7>{$1 \oplus B_3 \equiv \neg B_3$}
-			\only<8>{Top-Variable $b$}
-			\only<9>{Top-Variable $a$}
-			\only<10>{Top-Variable $b$, Abstieg ins High-Kind}
-			\only<11>{$A_3 \oplus 0 \equiv A_3$}
-			\only<12>{$A_3 \oplus 1 \equiv \neg A_3$}
+			\only<4>{Abstieg ins Low-Kind, neue Top-Variable $b$}
+			\only<5>{Abstieg ins Low-Kind, neue Top-Variable $c$}
+			\only<6>{Abkürzung: $0 \oplus B_3 \equiv B_3$}
+			\only<7>{Backtrack: Top-Variable $b$}
+			\only<8>{Abstieg ins High-Kind, neue Top-Variable $c$}
+			\only<9>{Abkürzung: $1 \oplus B_3 \equiv \neg B_3$}
+			\only<10>{Backtrack: Top-Variable $b$}
+			\only<11>{Backtrack: Top-Variable $a$}
+			\only<12>{Abstieg ins High-Kind, neue Top-Variable $b$}
+			\only<13>{Abstieg ins Low-Kind, neue Top-Variable $c$}
+			\only<14>{Abkürzung: $A_3 \oplus 0 \equiv A_3 \equiv B_3$}
+			\only<15>{Backtrack: Top-Variable $b$}
+			\only<16>{Abstieg ins High-Kind, neue Top-Variable $c$}
+			\only<17>{Abkürzung: $A_3 \oplus 1 \equiv \neg A_3 \equiv \neg B_3$}
 		\end{center}
 	}
-	\only<13->{
+	\only<18->{
 		\begin{center}
 			\begin{tikzpicture}
 
@@ -613,10 +679,10 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 				\draw[onearrow] (y3lr) -- (yzero);
 
 				% result	
-				\node[c, right=2*\bigspace-\smallspace of y1, visible on=<13>] (r1) {$a$};
+				\node[c, right=2*\bigspace-\smallspace of y1, visible on=<18>] (r1) {$a$};
 
 				\node[c] (r2l) [below=\smallspace of r1] {$b$};
-				\draw[zeroarrow, visible on=<13>] (r1) to[bend right] (r2l);
+				\draw[zeroarrow, visible on=<18>] (r1) to[bend right] (r2l);
 
 				\node[c] (r3ll) [below=\smallspace of r2l, xshift=-\smallspace] {$c$};
 				\draw[zeroarrow] (r2l) -- (r3ll);
@@ -631,12 +697,12 @@ $f=\textcolor{TUMExtRed}{\n{a}\n{c}}+\textcolor{TUMBlue}{\n{b}\n{d}}+\textcolor{
 				\draw[zeroarrow] (r3lr) -- (rzero);
 				\draw[onearrow] (r3lr) -- (rone);
 
-				\draw[onearrow, visible on=<13>] (r1) to[bend left] (r2l);
+				\draw[onearrow, visible on=<18>] (r1) to[bend left] (r2l);
 
 			\end{tikzpicture}
 			\vfill{}
-			\only<13>{I-Reduktion}
-			\only<14>{S-Reduktion}
+			\only<18>{Ergebnis nach I-Reduktion}
+			\only<19>{Ergebnis nach S-Reduktion}
 		\end{center}
 	}
 \end{frame}
